@@ -30,6 +30,11 @@
 #include <sys/time.h>
 #include <ctype.h>
 
+#if defined __alpha__ && defined __linux__
+// CC: linux/alpha needs sys/ioctl.h, but you must not set FREEBSD
+#include <sys/ioctl.h>
+#include "debug.h" // CC: for missing "safemalloc" prototype
+#endif
 #ifdef ALPHA
 #define FREEBSD
 #endif
